@@ -1,3 +1,14 @@
+2018-04-21  Yusuke Suzuki  <utatane.tea@gmail.com>
+
+        Unreviewed, follow-up patch after r230474
+        https://bugs.webkit.org/show_bug.cgi?id=166684
+
+        Add "JavaScriptCore" to Darwin name. And use short name "BMScavenger"
+        for Linux since adding "JavaScriptCore" makes the name too long for Linux.
+
+        * bmalloc/Scavenger.cpp:
+        (bmalloc::Scavenger::threadRunLoop):
+
 2018-04-18  Jer Noble  <jer.noble@apple.com>
 
         Don't put build products into WK_ALTERNATE_WEBKIT_SDK_PATH for engineering builds
